0.84.1
  - Updated DOSBox-X's integration device to version
    1.0.1, adding API calls such as DOSBox-X's version
    number and platform, and some DOS-related status
    such as DOS version number. (Wengier)
  - Improve the HX-DOS build package. (Wengier)
  - Use long double for internal event scheduling
    if available, to improve accuracy (joncampbell123).
  - Fix remaining SDL2 Windows problems by adding
    missing break statement above window event
    handler. (joncampbell123).
  - Move "Always on top" menu option from "Video" to
    "Main" menu, also enabled for Windows/macOS SDL2
    builds when possible. (Wengier)
  - Add workarounds for SDL2 builds to avoid problems
    with window resize, menu update, and restore
    events that sometimes caused the emulator to hang
    on startup in Windows. (joncampbell123).
  - Add "Set transparency..." and "Set text in title
    bar..." menu options under "Video" to change window
    transparency and title bar text. (Wengier)
  - Add special properties to CONFIG command including
    "system" and "version". (Wengier)
  - Fix DOS 8.3 filename generations when there are
    special characters in the filenames. (Wengier)
  - Fix creation of disk images with spaces using the
    "Create blank disk image..." menu option. (Wengier)
  - Fix IMGMAKE to provide executable code in MS-DOS
    partition or floppy disk boot sector following
    the BPB, that prints "This is not a bootable disk"
    instead of leaving zeros that lead the CPU astray
    and possibly hang the system in the event anything
    tries to boot the partition (joncampbell123).
  - Fix emulator segfault on invalid encoding of
    BOUND instruction (joncampbell123).
  - Address auto-centering on mode change complaints
    by making the "-" setting of windowposition the
    default. (joncampbell123).
  - Added MinGW-lowend SDL2 build, which is compatible
    with Windows XP. Also updated the build selection
    page for Windows installers. (Wengier)